# sp-ri-coverage-gap-report

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_output.md
src/sp_ri_coverage/: aws_client.py  cli.py  gap.py  report.py
tests/: test_gap.py
