[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sp-ri-coverage-gap-report"
version = "0.1.0"
description = "Merge Savings Plan + RI coverage vs. on-demand spend into a single gap report"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brian Dixon" }]
dependencies = [
    "boto3>=1.34",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
sp-ri-gap = "sp_ri_coverage.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
